--- a/ZoomLoginer/ZoomLoginer.csproj
+++ b/ZoomLoginer/ZoomLoginer.csproj
@@ -54,7 +54,13 @@
     <Compile Include="BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Event.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="EventProcesser.cs" />
+    <Compile Include="Free.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
