--- a/ZoomLoginer/ZoomLoginer.csproj
+++ b/ZoomLoginer/ZoomLoginer.csproj
@@ -64,6 +64,9 @@
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Option.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schedule.cs">
@@ -75,6 +78,9 @@
     <Compile Include="SetScheduleForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <EmbeddedResource Include="Option.resx">
+      <DependentUpon>Option.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
